# PrivatePay-ZK

./: .gitignore  README.md
circuits/: package-lock.json  package.json
circuits/scripts/: build_all.mjs  compile.mjs  prove.mjs  ptau.mjs  test_e2e.mjs  utils.mjs  verify.mjs  zkey.mjs
circuits/src/: compliance.circom  deposit.circom  merkleTree.circom  withdraw.circom
contracts/: Cargo.toml
contracts/pool/: Cargo.toml
contracts/pool/src/: lib.rs  test.rs
contracts/pool/test_snapshots/test/: test_deposit_real_token_transfer.1.json  test_deposit_zero_amount_fails.1.json  test_initialize_success.1.json  test_nullifier_not_initially_spent.1.json  test_update_root_requires_admin_auth.1.json
contracts/verifier/: Cargo.toml
contracts/verifier/src/: lib.rs
contracts/verifier/test_snapshots/test/: test_initialize_and_get_vk.1.json
docs/: architecture.md  demo_script.md  devpost.md
frontend/: package-lock.json  package.json
frontend/public/circuits/compliance/: compliance.wasm  compliance_final.zkey  compliance_verification_key.json
frontend/public/circuits/withdraw/: withdraw.wasm  withdraw_final.zkey  withdraw_verification_key.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/compliance/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/deposit/: page.tsx
frontend/src/app/transfer/: page.tsx
frontend/src/components/: Navbar.tsx  WalletProviderWrapper.tsx
frontend/src/context/: WalletContext.tsx
frontend/src/lib/: zk.ts
scripts/: build_circuits.sh  deploy.sh  deploy_testnet.mjs  vk_args.json
(+2 files in other folders)
